# videotools

./: AUTHORS  COPYING  ChangeLog  Makefile.am  Makefile.in  README  README.md  acinclude.m4  bootstrap  configure  configure.ac  configure.sh  gconfig_defs.h.in
doc/: Makefile.am  Makefile.in  abstract.txt  doxygen-missing.html  doxygen.cfg.in  doxygen.sh  example-fetch.html  example-full.html  example-iframes.html  example-refresh.html  example.cfg  example.html  example.pbm  index.html  readme.html  videotools.css
m4/: Makefile.am  Makefile.in
man/: Makefile.am  Makefile.in  videotools.1  vt-alarm.1  vt-channel.1  vt-fileplayer.1  vt-httpclient.1  vt-httpserver.1  vt-maskeditor.1  vt-recorder.1  vt-rtpserver.1  vt-rtspclient.1  vt-socket.1  vt-viewer.1  vt-watcher.1  vt-webcamplayer.1  vt-webcamserver.1
src/: Makefile.am  Makefile.in
src/glib/: Makefile.am  Makefile.in  garg.cpp  garg.h  gassert.h  gbase64.cpp  gbase64.h  gbititerator.h  gbitstream.h  gcleanup.h  gcleanup_unix.cpp  gconvert.cpp  gconvert.h  gconvert_none.cpp  gconvert_unix.cpp  gdaemon.h  gdaemon_unix.cpp  gdate.cpp  gdate.h  gdatetime.cpp  gdatetime.h  gdatetime_unix.cpp  gdebug.h  gdef.h  gdirectory.cpp  gdirectory.h  gdirectory_unix.cpp  gdirectorytree.cpp  gdirectorytree.h  genvironment.h  genvironment_unix.cpp  gexception.cpp  gexception.h  gexecutable.cpp  gexecutable.h  gexecutable_unix.cpp  gexpgolomb.h  gfatpipe.cpp  gfatpipe.h  gfile.cpp  (+72 more)
src/gnet/: Makefile.am  Makefile.in  gaddress.h  gaddress4.cpp  gaddress4.h  gaddress6.cpp  gaddress6.h  gaddress_ip.cpp  gaddress_ipv4.cpp  gaddress_ipv6.cpp  gbufferedserverpeer.cpp  gbufferedserverpeer.h  gclient.cpp  gclient.h  gclientptr.h  gconnection.cpp  gconnection.h  gdescriptor.cpp  gdescriptor.h  gdescriptor_unix.cpp  gevent.h  geventhandler.cpp  geventhandler.h  geventloop.cpp  geventloop.h  geventloop_unix.cpp  gfutureevent.h  gfutureevent_unix.cpp  gheapclient.cpp  gheapclient.h  ghttpclientparser.cpp  ghttpclientparser.h  ghttpclientprotocol.cpp  ghttpclientprotocol.h  glinebuffer.cpp  glinebuffer.h  glocal.cpp  glocal.h  glocation.cpp  glocation.h  (+21 more)
src/grlib/: Makefile.am  Makefile.in  gravc.cpp  gravc.h  grcolour.h  grcolour16.h  grcolourspace.cpp  grcolourspace.h  grcolourspacemap.h  grcolourspacematrix.h  grcolourspaceranges.h  grcolourspacetables.h  grcolourspacetypes.h  grdef.h  grglyph.cpp  grglyph.h  grhistogram.h  grimage.cpp  grimage.h  grimagebuffer.h  grimageconverter.cpp  grimageconverter.h  grimagedata.cpp  grimagedata.h  grimagedecoder.cpp  grimagedecoder.h  grimagetype.cpp  grimagetype.h  grjpeg.cpp  grjpeg.h  grjpeg_jpeg.cpp  grjpeg_none.cpp  grlinedraw.h  grpng.h  grpng_none.cpp  grpng_png.cpp  grpnm.cpp  grpnm.h  grscaler.h  grtraits.h  (+2 more)
src/gvideo/: Makefile.am  Makefile.in  doxygen.h  gvavcreader.h  gvavcreader_libav.cpp  gvavcreader_none.cpp  gvbars.cpp  gvbars.h  gvcache.cpp  gvcache.h  gvcamera.cpp  gvcamera.h  gvcapture.cpp  gvcapture.h  gvcapture_test.cpp  gvcapture_test.h  gvcapture_v4l.cpp  gvcapture_v4l.h  gvcapturebuffer.cpp  gvcapturebuffer.h  gvcapturefactory.h  gvcapturefactory_test.cpp  gvcapturefactory_v4l.cpp  gvclientholder.h  gvcommandsocket.cpp  gvcommandsocket.h  gvdatabase.cpp  gvdatabase.h  gvdemo.cpp  gvdemo.h  gvdemodata.h  gvexit.h  gvhttpserver.cpp  gvhttpserver.h  gvhttpserverpeer.cpp  gvhttpserverpeer.h  gvimagegenerator.cpp  gvimagegenerator.h  gvimageinput.cpp  gvimageinput.h  (+40 more)
src/gxlib/: Makefile.am  Makefile.in  gxcanvas.cpp  gxcanvas.h  gxcapture.h  gxcolourmap.cpp  gxcolourmap.h  gxcontext.cpp  gxcontext.h  gxdef.h  gxdisplay.cpp  gxdisplay.h  gxdrawable.cpp  gxdrawable.h  gxempty.cpp  gxerror.cpp  gxerror.h  gxeventhandler.cpp  gxeventhandler.h  gxeventloop.cpp  gxeventloop.h  gxeventqueue.h  gximage.cpp  gximage.h  gxpixmap.cpp  gxpixmap.h  gxvisual.cpp  gxvisual.h  gxwindow.cpp  gxwindow.h  gxwindowmap.cpp  gxwindowmap.h
src/main/: Makefile.am  Makefile.in  alarm.cpp  channel.cpp  fileplayer.cpp  httpclient.cpp  httpserver.cpp  maskeditor.cpp  recorder.cpp  rtpserver.cpp  rtspclient.cpp  socket.cpp  viewer.cpp  watcher.cpp  webcamplayer.cpp  webcamserver.cpp
