#
## Copyright (C) 2017 Graeme Walker
## 
## This program is free software: you can redistribute it and/or modify
## it under the terms of the GNU General Public License as published by
## the Free Software Foundation, either version 3 of the License, or
## (at your option) any later version.
## 
## This program is distributed in the hope that it will be useful,
## but WITHOUT ANY WARRANTY; without even the implied warranty of
## MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
## GNU General Public License for more details.
## 
## You should have received a copy of the GNU General Public License
## along with this program.  If not, see <http://www.gnu.org/licenses/>.
#
# man/Makefile.am

manfiles = \
	vt-alarm.1 \
	vt-channel.1 \
	vt-fileplayer.1 \
	vt-httpclient.1 \
	vt-httpserver.1 \
	vt-maskeditor.1 \
	vt-recorder.1 \
	vt-rtpserver.1 \
	vt-rtspclient.1 \
	vt-socket.1 \
	vt-viewer.1 \
	vt-watcher.1 \
	vt-webcamplayer.1 \
	vt-webcamserver.1 \
	videotools.1

EXTRA_DIST = $(manfiles)
man1_MANS = $(manfiles)
