#
## Copyright (C) 2017 Graeme Walker
## 
## This program is free software: you can redistribute it and/or modify
## it under the terms of the GNU General Public License as published by
## the Free Software Foundation, either version 3 of the License, or
## (at your option) any later version.
## 
## This program is distributed in the hope that it will be useful,
## but WITHOUT ANY WARRANTY; without even the implied warranty of
## MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
## GNU General Public License for more details.
## 
## You should have received a copy of the GNU General Public License
## along with this program.  If not, see <http://www.gnu.org/licenses/>.
#
# gnet/Makefile.am

noinst_LIBRARIES = libgnet.a

AM_CPPFLAGS = -I$(top_srcdir)/src/glib

EXTRA_DIST =

libgnet_a_SOURCES = \
	gaddress4.cpp \
	gaddress4.h \
	gaddress6.cpp \
	gaddress6.h \
	gaddress.h \
	gaddress_ip.cpp \
	gaddress_ipv4.cpp \
	gaddress_ipv6.cpp \
	gbufferedserverpeer.cpp \
	gbufferedserverpeer.h \
	gclient.cpp \
	gclient.h \
	gclientptr.h \
	gconnection.cpp \
	gconnection.h \
	gdescriptor.cpp \
	gdescriptor.h \
	gdescriptor_unix.cpp \
	gevent.h \
	geventhandler.cpp \
	geventhandler.h \
	geventloop.cpp \
	geventloop.h \
	geventloop_unix.cpp \
	gfutureevent_unix.cpp \
	gfutureevent.h \
	gheapclient.cpp \
	gheapclient.h \
	ghttpclientprotocol.cpp \
	ghttpclientprotocol.h \
	ghttpclientparser.cpp \
	ghttpclientparser.h \
	glinebuffer.cpp \
	glinebuffer.h \
	glocal.cpp \
	glocal.h \
	glocation.cpp \
	glocation.h \
	gnet.h \
	gmonitor.cpp \
	gmonitor.h \
	grequest.h \
	gresolver.cpp \
	gresolver.h \
	gserver.cpp \
	gserver.h \
	gsimpleclient.cpp \
	gsimpleclient.h \
	gsocket.cpp \
	gsocket.h \
	gsocketprotocol.cpp \
	gsocketprotocol.h \
	gsocket_unix.cpp \
	gssl.h \
	gssl_none.cpp \
	gtimer.cpp \
	gtimer.h \
	gtimerlist.cpp \
	gtimerlist.h

